Fix flex response for forms
- Also fixing up Reports a bit and removing random scrollbars from views
  (caused by overflow-y: scroll)

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,5 +4,4 @@ main {
   bottom: 0px;
   left: 0px;
   right: 0px;
-  overflow-y: scroll;
 }
