--- a/src/app/folder/folder.component.scss
+++ b/src/app/folder/folder.component.scss
@@ -9,7 +9,6 @@
   left: 0px;
   right: 0px;
   bottom: 0px;
-  overflow-y: scroll;
 }
 
 .document-table-header-row {
