--- a/src/app/form-submission/form-submission.component.scss
+++ b/src/app/form-submission/form-submission.component.scss
@@ -9,4 +9,8 @@
   right: 0px;
   bottom: 0px;
   overflow-y: scroll;
+  padding: 15px;
+}
+
+#form-content {
 }
