--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -17,5 +17,4 @@
   left: 0px;
   right: 0px;
   bottom: 0px;
-  overflow-y: scroll;
 }
