--- a/src/app/report/report-list/report-list.component.scss
+++ b/src/app/report/report-list/report-list.component.scss
@@ -1,56 +1,7 @@
-#hiddenScrollable {
-  position: fixed;
-  background: transparent;
-  height: 50px;
-  width: 50px;
-  left: -50px; /* Hide off page */
-  overflow-y: scroll;
-}
-
-#reportListContainer {
-  width: 100%;
+#report-table-wrapper {
   position: absolute;
   top: 64px;
   left: 0px;
-  bottom: 0px;
-  overflow-y: scroll;
-}
-
-#report-list-toolbar button {
-  margin-right: 8px;
-}
-
-.report-table td, .report-table th {
-  box-sizing: border-box;
-}
-
-.report-table td {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
-table.report-table {
-  table-layout: fixed;
-}
-
-[mat-header-cell]:last-child .column-grabber {
-  display: none;
-}
-
-[mat-header-cell], [mat-cell] {
-  padding-left: 10px;
-  padding-right: 10px;
-}
-
-.column-grabber {
-  content: '';
-  position: absolute;
-  top: 0px;
   right: 0px;
-  cursor: ew-resize;
-  width: 6px;
-  height: 100%;
-  overflow: hidden;
-  border-right: 1px solid #dfe0e1;
+  bottom: 0px;
 }
